--- a/styles.css
+++ b/styles.css
@@ -70,13 +70,24 @@ body {
   z-index: 1;
 }
 
+.warning {
+  font-size: 1rem;
+  position: absolute;
+  width: 80%;
+  top: 15%;
+  margin-left: 10%;
+  text-align: center;
+  color: red;
+  font-weight: 500;
+  opacity: 0;
+}
+
 .score {
-  /* width: 100vw; */
   display: flex;
   align-items: center;
   justify-content: flex-end;
   padding-right: 2rem;
-  padding-top: 2rem;
+  padding-top: 1.5rem;
   font-size: 3.5rem;
   font-weight: 600;
   color: rgb(233, 52, 52);
@@ -96,8 +107,7 @@ body {
   opacity: 0;
   position: absolute;
   top: 10%;
-  left: 20%;
-  width: 50%;
+  width: 100%;
   height: 60vh;
   background: white;
   transition: all 0.4s ease-in;
@@ -107,7 +117,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  padding: 5%;
 }
 
 .final-score-on-dead h1 {
@@ -124,12 +133,7 @@ body {
   z-index: 1000;
   width: 95px;
   height: 150px;
-  /* for run animation  */
   animation: run 1s infinite;
-  /* for dead */
-  /* animation: dead 1s infinite; */
-  /* For jump */
-  /* animation: jump 1s infinite; */
 }
 
 .enemy {
@@ -286,6 +290,71 @@ body {
   }
 }
 
+@-webkit-keyframes deadm {
+  0% {
+    background: url(./img/Dead1.png) no-repeat;
+    background-size: cover;
+    width: 100px;
+  }
+  10% {
+    background: url(./img/Dead2.png) no-repeat;
+    background-size: cover;
+  }
+  20% {
+    background: url(./img/Dead3.png) no-repeat;
+    background-size: cover;
+  }
+  30% {
+    background: url(./img/Dead4.png) no-repeat;
+    background-size: cover;
+  }
+  40% {
+    background: url(./img/Dead5.png) no-repeat;
+    background-size: cover;
+  }
+  50% {
+    background: url(./img/Dead6.png) no-repeat;
+    background-size: cover;
+  }
+  60% {
+    background: url(./img/Dead7.png) no-repeat;
+    background-size: cover;
+  }
+  65% {
+    background: url(./img/Dead8.png) no-repeat;
+    background-size: cover;
+  }
+  70% {
+    background: url(./img/Dead9.png) no-repeat;
+    background-size: cover;
+  }
+  75% {
+    background: url(./img/Dead10.png) no-repeat;
+    background-size: cover;
+  }
+  80% {
+    background: url(./img/Dead11.png) no-repeat;
+    background-size: cover;
+  }
+  85% {
+    background: url(./img/Dead12.png) no-repeat;
+    background-size: cover;
+  }
+  90% {
+    background: url(./img/Dead13.png) no-repeat;
+    background-size: cover;
+  }
+  95% {
+    background: url(./img/Dead14.png) no-repeat;
+    background-size: cover;
+  }
+  100% {
+    background: url(./img/Dead15.png) no-repeat;
+    background-size: cover;
+    width: 130px;
+  }
+}
+
 @-webkit-keyframes jump {
   0% {
     background: url(./img/Jump1.png) no-repeat;
@@ -311,7 +380,7 @@ body {
   50% {
     background: url(./img/Jump6.png) no-repeat;
     background-size: cover;
-    bottom: 50vh;
+    bottom: 40vh;
   }
   60% {
     background: url(./img/Jump7.png) no-repeat;
@@ -354,9 +423,61 @@ body {
 
 @keyframes enemy {
   0% {
-    right: -20%;
+    right: -10%;
   }
   100% {
-    right: 120%;
+    right: 100%;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .head h1 {
+    font-size: 1.5rem;
+  }
+
+  .head h3 {
+    font-size: 0.7rem;
+
+    margin-bottom: 1rem;
+  }
+
+  .head h4 {
+    font-size: 0.7rem;
+    padding: 0.5rem;
+  }
+
+  .head h2 {
+    font-size: 0.8rem;
+    margin-top: 1rem;
+    padding: 0.5rem;
+  }
+
+  .desktop i,
+  .mobile i {
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
+
+  .desktop,
+  .mobile {
+    font-size: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .platform {
+    height: 10vh;
+  }
+
+  .sprite {
+    bottom: 7vh;
+    width: 70px;
+    height: 110px;
+  }
+
+  .enemy {
+    bottom: 18vh;
+    width: 40px;
+    height: 20px;
   }
 }
