--- a/styles.css
+++ b/styles.css
@@ -1,487 +1,1 @@
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: sans-serif;
-  overflow-x: hidden;
-}
-
-.welcome {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  position: absolute;
-  z-index: 1002;
-  background: white;
-  transition: all 0.4s ease-in;
-}
-
-.head h1 {
-  font-size: 3rem;
-  color: rgb(20, 20, 20);
-  margin: 0;
-}
-
-.head h3 {
-  color: rgb(153, 153, 153);
-  font-size: 0.9rem;
-  margin-top: 0;
-  margin-bottom: 2rem;
-}
-
-.head h4 {
-  background: rgb(20, 20, 20);
-  color: white;
-  padding: 1rem;
-}
-.head h2 {
-  font-size: 1.6rem;
-  margin-top: 2rem;
-  padding: 1rem;
-  border-bottom: 2px solid black;
-  border-top: 2px solid black;
-}
-
-.how-to {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.desktop i,
-.mobile i {
-  font-size: 2rem;
-  color: rgb(20, 20, 20);
-  padding: 1rem;
-}
-
-.game-area {
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  background: #69df89 url(./img/BG.png);
-  background-repeat: repeat-x;
-  position: relative;
-  animation: animatebg 2.5s reverse linear infinite;
-  z-index: 1;
-}
-
-.warning {
-  font-size: 1rem;
-  position: absolute;
-  width: 80%;
-  top: 15%;
-  margin-left: 10%;
-  text-align: center;
-  color: red;
-  font-weight: 500;
-  opacity: 0;
-}
-
-.score {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding-right: 2rem;
-  padding-top: 1.5rem;
-  font-size: 3.5rem;
-  font-weight: 600;
-  color: rgb(233, 52, 52);
-}
-.platform {
-  height: 13vh;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
-  background: url(./img/2.png);
-  z-index: 1;
-  position: absolute;
-  animation: animatebg 2s reverse linear infinite;
-}
-
-.final-score-on-dead {
-  opacity: 0;
-  position: absolute;
-  top: 10%;
-  width: 100%;
-  height: 60vh;
-  background: white;
-  transition: all 0.4s ease-in;
-  z-index: 1001;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.final-score-on-dead h1 {
-  font-size: 2rem;
-  color: rgb(233, 52, 52);
-}
-
-.sprite {
-  background: url(./img/Run1.png) no-repeat;
-  background-size: cover;
-  position: absolute;
-  bottom: 10vh;
-  left: 15%;
-  z-index: 1000;
-  width: 95px;
-  height: 150px;
-  animation: run 1s infinite;
-}
-
-.enemy {
-  position: absolute;
-  bottom: 18vh;
-  right: -20%;
-  z-index: 1000;
-  width: 100px;
-  height: 40px;
-  background: rgb(236, 72, 57);
-  border-radius: 50%;
-  box-shadow: 0px 0px 7px 13px rgb(236, 72, 57);
-  animation: enemy 1.5s linear;
-}
-
-/* ------------------ */
-/*  ANIMATIONS  */
-/* ------------------ */
-
-@keyframes animatebg {
-  0% {
-    background-position-x: 0px;
-  }
-  100% {
-    background-position-x: 1000px;
-  }
-}
-
-@-webkit-keyframes run {
-  0% {
-    background: url(./img/Run1.png) no-repeat;
-    background-size: cover;
-  }
-  10% {
-    background: url(./img/Run2.png) no-repeat;
-    background-size: cover;
-  }
-  20% {
-    background: url(./img/Run3.png) no-repeat;
-    background-size: cover;
-  }
-  30% {
-    background: url(./img/Run4.png) no-repeat;
-    background-size: cover;
-  }
-  40% {
-    background: url(./img/Run5.png) no-repeat;
-    background-size: cover;
-  }
-  50% {
-    background: url(./img/Run6.png) no-repeat;
-    background-size: cover;
-  }
-  60% {
-    background: url(./img/Run7.png) no-repeat;
-    background-size: cover;
-  }
-  65% {
-    background: url(./img/Run8.png) no-repeat;
-    background-size: cover;
-  }
-  70% {
-    background: url(./img/Run9.png) no-repeat;
-    background-size: cover;
-  }
-  75% {
-    background: url(./img/Run10.png) no-repeat;
-    background-size: cover;
-  }
-  80% {
-    background: url(./img/Run11.png) no-repeat;
-    background-size: cover;
-  }
-  85% {
-    background: url(./img/Run12.png) no-repeat;
-    background-size: cover;
-  }
-  90% {
-    background: url(./img/Run13.png) no-repeat;
-    background-size: cover;
-  }
-  95% {
-    background: url(./img/Run14.png) no-repeat;
-    background-size: cover;
-  }
-  100% {
-    background: url(./img/Run15.png) no-repeat;
-    background-size: cover;
-  }
-}
-
-@-webkit-keyframes dead {
-  0% {
-    background: url(./img/Dead1.png) no-repeat;
-    background-size: cover;
-    width: 150px;
-  }
-  10% {
-    background: url(./img/Dead2.png) no-repeat;
-    background-size: cover;
-  }
-  20% {
-    background: url(./img/Dead3.png) no-repeat;
-    background-size: cover;
-  }
-  30% {
-    background: url(./img/Dead4.png) no-repeat;
-    background-size: cover;
-  }
-  40% {
-    background: url(./img/Dead5.png) no-repeat;
-    background-size: cover;
-  }
-  50% {
-    background: url(./img/Dead6.png) no-repeat;
-    background-size: cover;
-  }
-  60% {
-    background: url(./img/Dead7.png) no-repeat;
-    background-size: cover;
-  }
-  65% {
-    background: url(./img/Dead8.png) no-repeat;
-    background-size: cover;
-  }
-  70% {
-    background: url(./img/Dead9.png) no-repeat;
-    background-size: cover;
-  }
-  75% {
-    background: url(./img/Dead10.png) no-repeat;
-    background-size: cover;
-  }
-  80% {
-    background: url(./img/Dead11.png) no-repeat;
-    background-size: cover;
-  }
-  85% {
-    background: url(./img/Dead12.png) no-repeat;
-    background-size: cover;
-  }
-  90% {
-    background: url(./img/Dead13.png) no-repeat;
-    background-size: cover;
-  }
-  95% {
-    background: url(./img/Dead14.png) no-repeat;
-    background-size: cover;
-  }
-  100% {
-    background: url(./img/Dead15.png) no-repeat;
-    background-size: cover;
-    width: 180px;
-  }
-}
-
-@-webkit-keyframes deadm {
-  0% {
-    background: url(./img/Dead1.png) no-repeat;
-    background-size: cover;
-    width: 100px;
-  }
-  10% {
-    background: url(./img/Dead2.png) no-repeat;
-    background-size: cover;
-  }
-  20% {
-    background: url(./img/Dead3.png) no-repeat;
-    background-size: cover;
-  }
-  30% {
-    background: url(./img/Dead4.png) no-repeat;
-    background-size: cover;
-  }
-  40% {
-    background: url(./img/Dead5.png) no-repeat;
-    background-size: cover;
-  }
-  50% {
-    background: url(./img/Dead6.png) no-repeat;
-    background-size: cover;
-  }
-  60% {
-    background: url(./img/Dead7.png) no-repeat;
-    background-size: cover;
-  }
-  65% {
-    background: url(./img/Dead8.png) no-repeat;
-    background-size: cover;
-  }
-  70% {
-    background: url(./img/Dead9.png) no-repeat;
-    background-size: cover;
-  }
-  75% {
-    background: url(./img/Dead10.png) no-repeat;
-    background-size: cover;
-  }
-  80% {
-    background: url(./img/Dead11.png) no-repeat;
-    background-size: cover;
-  }
-  85% {
-    background: url(./img/Dead12.png) no-repeat;
-    background-size: cover;
-  }
-  90% {
-    background: url(./img/Dead13.png) no-repeat;
-    background-size: cover;
-  }
-  95% {
-    background: url(./img/Dead14.png) no-repeat;
-    background-size: cover;
-  }
-  100% {
-    background: url(./img/Dead15.png) no-repeat;
-    background-size: cover;
-    width: 130px;
-  }
-}
-
-@-webkit-keyframes jump {
-  0% {
-    background: url(./img/Jump1.png) no-repeat;
-    background-size: cover;
-    bottom: 10vh;
-  }
-  10% {
-    background: url(./img/Jump2.png) no-repeat;
-    background-size: cover;
-  }
-  20% {
-    background: url(./img/Jump3.png) no-repeat;
-    background-size: cover;
-  }
-  30% {
-    background: url(./img/Jump4.png) no-repeat;
-    background-size: cover;
-  }
-  40% {
-    background: url(./img/Jump5.png) no-repeat;
-    background-size: cover;
-  }
-  50% {
-    background: url(./img/Jump6.png) no-repeat;
-    background-size: cover;
-    bottom: 45vh;
-  }
-  60% {
-    background: url(./img/Jump7.png) no-repeat;
-    background-size: cover;
-  }
-  65% {
-    background: url(./img/Jump8.png) no-repeat;
-    background-size: cover;
-  }
-  70% {
-    background: url(./img/Jump9.png) no-repeat;
-    background-size: cover;
-  }
-  75% {
-    background: url(./img/Jump10.png) no-repeat;
-    background-size: cover;
-  }
-  80% {
-    background: url(./img/Jump11.png) no-repeat;
-    background-size: cover;
-  }
-  85% {
-    background: url(./img/Jump12.png) no-repeat;
-    background-size: cover;
-  }
-  90% {
-    background: url(./img/Jump13.png) no-repeat;
-    background-size: cover;
-  }
-  95% {
-    background: url(./img/Jump14.png) no-repeat;
-    background-size: cover;
-  }
-  100% {
-    background: url(./img/Jump15.png) no-repeat;
-    background-size: cover;
-    bottom: 10vh;
-  }
-}
-
-@keyframes enemy {
-  0% {
-    right: -10%;
-  }
-  100% {
-    right: 100%;
-  }
-}
-
-@media only screen and (max-width: 900px) {
-  .head h1 {
-    font-size: 1.5rem;
-  }
-
-  .head h3 {
-    font-size: 0.7rem;
-
-    margin-bottom: 1rem;
-  }
-
-  .head h4 {
-    font-size: 0.7rem;
-    padding: 0.5rem;
-  }
-
-  .head h2 {
-    font-size: 0.8rem;
-    margin-top: 1rem;
-    padding: 0.5rem;
-  }
-
-  .desktop i,
-  .mobile i {
-    font-size: 1rem;
-    padding: 0.5rem;
-  }
-
-  .desktop,
-  .mobile {
-    font-size: 0.7rem;
-  }
-}
-
-@media only screen and (max-width: 900px) {
-  .sprite {
-    bottom: 6vh;
-  }
-
-  .enemy {
-    width: 20px;
-    height: 10px;
-  }
-}
-
-@media only screen and (max-width: 450px) {
-  .sprite {
-    bottom: 9vh;
-  }
-
-  .enemy {
-    width: 40px;
-    height: 20px;
-  }
-}
+body{margin:0;padding:0;box-sizing:border-box;font-family:sans-serif;overflow-x:hidden}.welcome{width:100vw;height:100vh;display:flex;justify-content:center;align-items:center;text-align:center;position:absolute;z-index:1002;background:#fff;transition:all .4s ease-in}.head h1{font-size:3rem;color:#141414;margin:0}.head h3{color:#999;font-size:.9rem;margin-top:0;margin-bottom:2rem}.head h4{background:#141414;color:#fff;padding:1rem}.head h2{font-size:1.6rem;margin-top:2rem;padding:1rem;border-bottom:2px solid #000;border-top:2px solid #000}.how-to{display:flex;flex-direction:column;align-items:center;justify-content:space-around}.desktop i,.mobile i{font-size:2rem;color:#141414;padding:1rem}.game-area{width:100vw;height:100vh;overflow:hidden;background:#69df89 url(img/BG.png);background-repeat:repeat-x;position:relative;animation:animatebg 2.5s reverse linear infinite;z-index:1}.warning{font-size:1rem;position:absolute;width:80%;top:15%;margin-left:10%;text-align:center;color:red;font-weight:500;opacity:0}.score{display:flex;align-items:center;justify-content:flex-end;padding-right:2rem;padding-top:1.5rem;font-size:3.5rem;font-weight:600;color:#e93434}.platform{height:13vh;bottom:0;left:0;width:100vw;background:url(img/2.png);z-index:1;position:absolute;animation:animatebg 2s reverse linear infinite}.final-score-on-dead{opacity:0;position:absolute;top:10%;width:100%;height:60vh;background:#fff;transition:all .4s ease-in;z-index:1001;text-align:center;display:flex;flex-direction:column;align-items:center;justify-content:space-evenly}.final-score-on-dead h1{font-size:2rem;color:#e93434}.sprite{background:url(img/Run1.png) no-repeat;background-size:cover;position:absolute;bottom:10vh;left:15%;z-index:1000;width:95px;height:150px;animation:run 1s infinite}.enemy{position:absolute;bottom:18vh;right:-20%;z-index:1000;width:100px;height:40px;background:#ec4839;border-radius:50%;box-shadow:0 0 7px 13px #ec4839;animation:enemy 1.5s linear}@keyframes animatebg{0%{background-position-x:0}100%{background-position-x:1000px}}@-webkit-keyframes run{0%{background:url(img/Run1.png) no-repeat;background-size:cover}10%{background:url(img/Run2.png) no-repeat;background-size:cover}20%{background:url(img/Run3.png) no-repeat;background-size:cover}30%{background:url(img/Run4.png) no-repeat;background-size:cover}40%{background:url(img/Run5.png) no-repeat;background-size:cover}50%{background:url(img/Run6.png) no-repeat;background-size:cover}60%{background:url(img/Run7.png) no-repeat;background-size:cover}65%{background:url(img/Run8.png) no-repeat;background-size:cover}70%{background:url(img/Run9.png) no-repeat;background-size:cover}75%{background:url(img/Run10.png) no-repeat;background-size:cover}80%{background:url(img/Run11.png) no-repeat;background-size:cover}85%{background:url(img/Run12.png) no-repeat;background-size:cover}90%{background:url(img/Run13.png) no-repeat;background-size:cover}95%{background:url(img/Run14.png) no-repeat;background-size:cover}100%{background:url(img/Run15.png) no-repeat;background-size:cover}}@-webkit-keyframes dead{0%{background:url(img/Dead1.png) no-repeat;background-size:cover;width:150px}10%{background:url(img/Dead2.png) no-repeat;background-size:cover}20%{background:url(img/Dead3.png) no-repeat;background-size:cover}30%{background:url(img/Dead4.png) no-repeat;background-size:cover}40%{background:url(img/Dead5.png) no-repeat;background-size:cover}50%{background:url(img/Dead6.png) no-repeat;background-size:cover}60%{background:url(img/Dead7.png) no-repeat;background-size:cover}65%{background:url(img/Dead8.png) no-repeat;background-size:cover}70%{background:url(img/Dead9.png) no-repeat;background-size:cover}75%{background:url(img/Dead10.png) no-repeat;background-size:cover}80%{background:url(img/Dead11.png) no-repeat;background-size:cover}85%{background:url(img/Dead12.png) no-repeat;background-size:cover}90%{background:url(img/Dead13.png) no-repeat;background-size:cover}95%{background:url(img/Dead14.png) no-repeat;background-size:cover}100%{background:url(img/Dead15.png) no-repeat;background-size:cover;width:180px}}@-webkit-keyframes deadm{0%{background:url(img/Dead1.png) no-repeat;background-size:cover;width:100px}10%{background:url(img/Dead2.png) no-repeat;background-size:cover}20%{background:url(img/Dead3.png) no-repeat;background-size:cover}30%{background:url(img/Dead4.png) no-repeat;background-size:cover}40%{background:url(img/Dead5.png) no-repeat;background-size:cover}50%{background:url(img/Dead6.png) no-repeat;background-size:cover}60%{background:url(img/Dead7.png) no-repeat;background-size:cover}65%{background:url(img/Dead8.png) no-repeat;background-size:cover}70%{background:url(img/Dead9.png) no-repeat;background-size:cover}75%{background:url(img/Dead10.png) no-repeat;background-size:cover}80%{background:url(img/Dead11.png) no-repeat;background-size:cover}85%{background:url(img/Dead12.png) no-repeat;background-size:cover}90%{background:url(img/Dead13.png) no-repeat;background-size:cover}95%{background:url(img/Dead14.png) no-repeat;background-size:cover}100%{background:url(img/Dead15.png) no-repeat;background-size:cover;width:130px}}@-webkit-keyframes jump{0%{background:url(img/Jump1.png) no-repeat;background-size:cover;bottom:10vh}10%{background:url(img/Jump2.png) no-repeat;background-size:cover}20%{background:url(img/Jump3.png) no-repeat;background-size:cover}30%{background:url(img/Jump4.png) no-repeat;background-size:cover}40%{background:url(img/Jump5.png) no-repeat;background-size:cover}50%{background:url(img/Jump6.png) no-repeat;background-size:cover;bottom:45vh}60%{background:url(img/Jump7.png) no-repeat;background-size:cover}65%{background:url(img/Jump8.png) no-repeat;background-size:cover}70%{background:url(img/Jump9.png) no-repeat;background-size:cover}75%{background:url(img/Jump10.png) no-repeat;background-size:cover}80%{background:url(img/Jump11.png) no-repeat;background-size:cover}85%{background:url(img/Jump12.png) no-repeat;background-size:cover}90%{background:url(img/Jump13.png) no-repeat;background-size:cover}95%{background:url(img/Jump14.png) no-repeat;background-size:cover}100%{background:url(img/Jump15.png) no-repeat;background-size:cover;bottom:10vh}}@keyframes enemy{0%{right:-10%}100%{right:100%}}@media only screen and (max-width:900px){.head h1{font-size:1.5rem}.head h3{font-size:.7rem;margin-bottom:1rem}.head h4{font-size:.7rem;padding:.5rem}.head h2{font-size:.8rem;margin-top:1rem;padding:.5rem}.desktop i,.mobile i{font-size:1rem;padding:.5rem}.desktop,.mobile{font-size:.7rem}}@media only screen and (max-width:900px){.sprite{bottom:6vh}.enemy{width:20px;height:10px}}@media only screen and (max-width:450px){.sprite{bottom:9vh}.enemy{width:40px;height:20px}}
